0.18.0 (UNRELEASED)
===================

Migrations:

  * declare_supported_languages for #2800.  Make sure you run this upgrade step
    with configuration profile 'opencore.configuration:default' or else rebuild
    to pick up changes!

Features Added:

  * The manage-team view now provides a "Write message to team" button which
    directs the user to his ISyncWithProjectMembership mailing list.  If the
    listen featurelet is not installed or there is no ISyncWithProjectMembership
    list within the project's lists container, the button will not be present.
    (Feature requested by Tom L.)

    A new @@contact-team view is registered on all IListenFeatureletInstalled
    objects to do the dynamic redirection. (egj)

  * IWikiHistory page history cache objects now have a resync_history_cache
    method that will resync the cache w/ the canonical history in the
    portal_repository tool. (rafrombrc)

  * submit-error-report now also includes the logged in user id, if
    any. (slinkp)

  * Project content export is now linked from the top nav, and
    includes: wiki pages, file and image attachments, mailing list
    archive as an mbox file, mailing list subscribers and allowed
    senders as a csv file, and blog pages as a WXR file. (slinkp)

    Export is done asynchronously with an ajax UI in case it takes a
    long time. (slinkp)

  * Member deletion now works, and has a link from the account page.
    (slinkp)

  * Added 'sortable_title' index (w/ associated ISortableTitle indexing
    adapter) to portal_catalog. (rafrombrc)

  * Added IMemberRegisteredEvent and IPortraitModifiedEvent events, firing
    them at the appropriate places. (rafrombrc)

  * Added 'opencore.analytics' viewlet to allow easy inclusion of an
    analytics snippet in the IExtraBody viewlet manager. (rafrombrc)

  * Added support for optional 'include_time' argument to the pretty_date
    functions. (rafrombrc)

  * Wrapped status message div in a span tag with an id of