@@ -106,6 +106,12 @@ def tounicode(doc, pretty_print=False, include_meta_content_type=False, encoding
 from opencore.xinha.i18n import available_languages as available_xinha_languages
 from zope.i18n.interfaces import IUserPreferredLanguages
 from Products.PlacelessTranslationService.Negotiator import lang_accepted
+
+class RedirectToWikiEdit(WikiBase):
+
+    def __call__(self, *args, **kw):
+        return self.redirect('./edit')
+
 class WikiEdit(WikiBase, OctopoLite):
 
     template = ZopeTwoPageTemplateFile("wiki-edit-xinha.pt")
@@ -447,7 +453,13 @@ class WikiEdit(WikiBase, OctopoLite):
         if rawtext:
             return rawtext
         else:
-            return "<p>Please enter some text for your page</p>"
+            return self.blank_slate_content()
+
+    def blank_slate_content(self):
+        """
+        override this in a subclass for custom wiki blank slate text
+        """
+        return "<p>Please enter some text for your page</p>"
 
 
 class AttachmentView(BaseView):
